--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.3.1",
+    "@mui/joy": "^5.0.0-beta.51",
+    "@mui/material": "^6.4.0",
+    "@mui/x-date-pickers": "^7.24.0",
+    "dayjs": "^1.11.13",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
